--- a/app/src/main/res/layout/activity_mobile.xml
+++ b/app/src/main/res/layout/activity_mobile.xml
@@ -8,6 +8,20 @@
     tools:context=".mobile.Mobile">
     <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/progress"
+        android:background="#61000000"
+        android:visibility="gone"
+        android:elevation="3dp"
+        >
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="@color/gradientEnd"
         android:id="@+id/re1">
@@ -125,7 +139,7 @@
         android:layout_below="@id/offer"
         android:layout_marginTop="25dp"
         android:background="@drawable/button_bg"
-        android:text="Next"
+        android:text="Proceed"
         android:textColor="@color/gradientStart" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -137,5 +151,8 @@
         android:layout_marginEnd="15dp"
         android:layout_marginTop="15dp"
         />
+
+
+
 
 </RelativeLayout>
