--- a/app/src/main/res/layout/activity_mobile_recharge_successfull.xml
+++ b/app/src/main/res/layout/activity_mobile_recharge_successfull.xml
@@ -86,6 +86,14 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tran_details"
+        android:layout_below="@id/success"
+        >
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -95,7 +103,7 @@
         android:textSize="16sp"
         android:id="@+id/transaction_id"
         android:layout_marginStart="15dp"
-        android:layout_below="@id/success"/>
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -162,4 +170,5 @@
         android:textColor="#2196F3"
         android:id="@+id/order1"
         android:text="123456"/>
+    </RelativeLayout>
 </RelativeLayout>
