--- a/app/src/main/res/layout/activity_postpaid_screen.xml
+++ b/app/src/main/res/layout/activity_postpaid_screen.xml
@@ -49,6 +49,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:id="@+id/postpaid_number"
+            android:maxLength="10"
             android:imeOptions="actionDone"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
@@ -115,7 +116,7 @@
         android:layout_below="@id/e_amount"
         android:layout_marginTop="25dp"
         android:background="@drawable/button_bg"
-        android:text="Next"
+        android:text="proceed"
         android:textColor="@color/gradientStart" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -128,7 +129,20 @@
         android:layout_marginTop="15dp"
         />
 
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/progress"
+        android:background="#61000000"
+        android:visibility="gone"
+        android:elevation="3dp"
+        >
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            />
+    </RelativeLayout>
 
 
 
