--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -10,38 +10,39 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/background_gradiant"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/background_gradiant" />
 
         <TextView
             android:id="@+id/icon1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="80dp"
             android:scaleType="fitCenter"
             android:text="DilPay"
-            android:textSize="30sp"
             android:textColor="#fff"
+            android:textSize="30sp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/icon2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
             android:layout_below="@id/icon1"
             android:layout_centerHorizontal="true"
-            android:scaleType="fitCenter"
             android:text="DilPay services Pvt Ltd"
+            android:textColor="#fff"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="#fff"/>
+            android:textStyle="bold" />
 
-
-
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -49,8 +50,7 @@
             android:layout_marginRight="12dp"
             android:layout_marginBottom="-8dp"
             android:padding="8dp"
-            app:cardCornerRadius="8dp"
-            android:id="@+id/cc1">
+            app:cardCornerRadius="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -59,108 +59,115 @@
                 android:padding="15dp">
 
                 <com.google.android.material.textfield.TextInputLayout
-
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Full Name"
-                    app:boxStrokeColor="@color/gradientStart"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="text"
-                        android:id="@+id/e_name"
-                        android:imeOptions="actionNext"
-                        />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-                <com.google.android.material.textfield.TextInputLayout
-
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Mobile Number"
-                    app:boxStrokeColor="@color/gradientStart"
-                    android:layout_marginTop="5dp"
-
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                    app:boxStrokeColor="@color/gradientStart">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="text"
-                        android:maxLength="10"
                         android:id="@+id/e_mobile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
-                        />
+                        android:inputType="number"
+                        android:maxLength="10" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/passLayout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:hint="OTP"
+                    android:visibility="gone"
+                    app:boxStrokeColor="@color/gradientStart"
+                    app:endIconMode="password_toggle">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/e_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:imeOptions="actionDone"
+                        android:inputType="textPassword" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-
-                    android:layout_marginTop="5dp"
+                    android:id="@+id/nameLayout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="emial"
-                    app:boxStrokeColor="@color/gradientStart"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textEmailAddress"
-                        android:imeOptions="actionNext"
-                        android:id="@+id/email"
-                        />
-
-                </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-
                     android:layout_marginTop="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Referal code (Optional)"
+                    android:hint="Full name"
+                    android:visibility="gone"
                     app:boxStrokeColor="@color/gradientStart"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textEmailAddress"
-                        android:imeOptions="actionNext"
-                        android:id="@+id/refercode"
-                        />
+                        android:imeOptions="actionDone"
+                        android:inputType="text" />
 
                 </com.google.android.material.textfield.TextInputLayout>
-
-
-
 
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/getOTP"
                     android:layout_width="200dp"
-                    android:id="@+id/register"
-                    android:layout_marginTop="15dp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/button_bg"
-                    android:text="Register"
-                    android:textColor="@color/gradientStart"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/button_main"
+                    android:text="get otp"
+                    android:textColor="#fff"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/signup"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/background_gradiant"
+                    android:text="Signup"
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:text="Already have an Account?" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/login"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
-                    android:layout_gravity="center"/>
+                    android:background="@drawable/button_bg"
+                    android:text="Login"
+                    android:textStyle="bold" />
+
 
             </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/progress_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#EDFFFFFF"
+        android:background="#83000000"
         android:visibility="gone">
 
         <ProgressBar
