--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/gradientStart</item>
         <item name="colorPrimaryVariant">@color/gradientStart</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="selectableItemBackground">@color/gradientStart</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/gradientStart</item><!-- For calender radio button etc..  -->
         <item name="colorSecondaryVariant">@color/teal_700</item>
