--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -232,7 +232,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginBottom="3dp" />
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lin5"
@@ -252,6 +252,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/wallet1"
             android:text="My Wallet"
+            android:layout_toRightOf="@id/wallet"
             android:textStyle="bold"
             android:textColor="#000"
             android:transitionName="trans3"
@@ -259,7 +260,26 @@
             android:textSize="14sp"
             android:layout_marginTop="6dp"
             />
-    </LinearLayout>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/rupee"
+            android:layout_width="20dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_toStartOf="@id/amount"
+            android:layout_gravity="center"
+            android:src="@drawable/rupee" />
+
+        <TextView
+            android:id="@+id/amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="250"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/gradientStart"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
     <View
         android:id="@+id/v5"
         android:layout_width="match_parent"
