--- a/app/src/main/res/layout/for_buses_list_recycler.xml
+++ b/app/src/main/res/layout/for_buses_list_recycler.xml
@@ -10,6 +10,9 @@
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_margin="10dp"
         android:elevation="6dp"
         app:cardCornerRadius="3dp">
@@ -18,7 +21,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
-
 
             <TextView
                 android:id="@+id/depart_time"
@@ -35,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_toRightOf="@id/depart_time"
+                android:layout_toEndOf="@id/depart_time"
                 android:text="-" />
 
             <TextView
@@ -43,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_toRightOf="@id/line"
+                android:layout_toEndOf="@id/line"
                 android:text="08:00"
                 android:textColor="#000"
                 android:textSize="16sp"
@@ -68,7 +70,6 @@
                     android:id="@+id/amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/rupee"
                     android:text="250"
                     android:textColor="#0071cc"
                     android:textSize="16sp"
@@ -114,9 +115,6 @@
                     android:text="45" />
             </LinearLayout>
 
-
-
-
             <TextView
                 android:id="@+id/bus_type"
                 android:layout_width="wrap_content"
@@ -135,7 +133,6 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="10dp"
                 android:layout_toEndOf="@id/bus_type"/>
-
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
 
