--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -85,7 +85,7 @@
                     android:layout_marginTop="5dp"
                     android:hint="OTP"
                     android:visibility="gone"
-                    app:boxStrokeColor="@color/teal_200"
+                    app:boxStrokeColor="@color/gradientStart"
                     app:endIconMode="password_toggle">
 
                     <com.google.android.material.textfield.TextInputEditText
