--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#fff"
-            android:text="Sagar"
+            android:text="test"
             android:paddingTop="20dp"
             android:layout_marginStart="15dp"
             android:textSize="18sp"
@@ -37,8 +37,8 @@
             android:id="@+id/customer_mobile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1234567890"
             android:layout_marginStart="15dp"
+            android:text="1234567890"
             android:textColor="#fff" />
 
         <TextView
