--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -95,7 +95,7 @@
             />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/selectDrop"
+            android:id="@+id/membership"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_gravity="bottom"
