--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -130,20 +130,20 @@
                     />
             </LinearLayout>
 
-            <RelativeLayout
-                android:id="@+id/progress_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#EDFFFFFF"
-                android:visibility="gone">
 
-                <ProgressBar
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true" />
-            </RelativeLayout>
 
         </LinearLayout>
 </ScrollView>
+    <RelativeLayout
+        android:id="@+id/progress_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#83000000"
+        android:visibility="visible">
 
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 </RelativeLayout>
