--- a/app/src/main/res/layout/activity_bus_details_confirmation.xml
+++ b/app/src/main/res/layout/activity_bus_details_confirmation.xml
@@ -60,10 +60,11 @@
                     android:textStyle="bold"
                     android:textColor="@color/black" />
 
-                <TextView
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="To"
+                    android:src="@drawable/right_arrow"
                     android:textSize="16sp"
                     android:id="@+id/to"
                     android:layout_centerHorizontal="true" />
@@ -95,16 +96,16 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:id="@+id/duration"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="1dp"
                     android:layout_below="@id/to"
                     android:layout_centerHorizontal="true" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="duration"
-                    android:textSize="14sp"
-                    android:layout_below="@id/duration"
-                    android:layout_centerHorizontal="true" />
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="duration"-->
+<!--                    android:textSize="14sp"-->
+<!--                    android:layout_below="@id/duration"-->
+<!--                    android:layout_centerHorizontal="true" />-->
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -118,14 +119,7 @@
                     android:layout_marginTop="2dp"
                     android:text="07:30PM" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/pickup_time"
-                    android:id="@+id/journey_date"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="10dp"
-                    android:text="25-01-2021" />
+
             </RelativeLayout>
 
             <TextView
@@ -150,6 +144,21 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:id="@+id/re4">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/abc"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:text="Journey Date" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/journey_date"
+                        android:layout_below="@+id/abc"
+                        android:textSize="16sp"
+                        android:text="25-01-2021" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -157,6 +166,8 @@
                         android:id="@+id/travels"
                         android:textSize="16sp"
                         android:textStyle="bold"
+                        android:layout_marginTop="5dp"
+                        android:layout_below="@+id/journey_date"
                         android:textColor="@color/black"
                         android:text="Travels" />
 
@@ -166,7 +177,6 @@
                         android:layout_below="@+id/travels"
                         android:id="@+id/bus_type"
                         android:textSize="16sp"
-                        android:layout_marginTop="5dp"
                         android:text="busType" />
 
                     <TextView
@@ -186,7 +196,6 @@
                         android:layout_below="@+id/board"
                         android:id="@+id/board_point"
                         android:textSize="16sp"
-                        android:layout_marginTop="5dp"
                         android:text="Lb nagar" />
 
                     <TextView
@@ -206,7 +215,6 @@
                         android:layout_below="@+id/dropping"
                         android:id="@+id/drop_point"
                         android:textSize="16sp"
-                        android:layout_marginTop="5dp"
                         android:text="bangalore" />
 
                     <TextView
@@ -342,4 +350,16 @@
                 android:textColor="#fff" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+    <RelativeLayout
+        android:id="@+id/progress_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#83000000"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 </RelativeLayout>
