--- a/app/src/main/res/layout/activity_gas_screen.xml
+++ b/app/src/main/res/layout/activity_gas_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Gas_screen">
+    tools:context=".gas.Gas_screen">
 
     <RelativeLayout
         android:id="@+id/re1"
