--- a/app/src/main/res/layout/activity_upgrade_membership.xml
+++ b/app/src/main/res/layout/activity_upgrade_membership.xml
@@ -96,7 +96,7 @@
                     android:textSize="16sp"
                     android:layout_gravity="center"/>
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/skip_btn"
+                    android:id="@+id/sign_up"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
