--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -53,7 +53,7 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/skip_btn"
+        android:id="@+id/sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Signup"
