add account details

--- a/app/src/main/res/layout/activity_payment_test.xml
+++ b/app/src/main/res/layout/activity_payment_test.xml
@@ -87,7 +87,7 @@
         android:textColor="#2196F3"
         android:layout_marginStart="15dp"
         android:id="@+id/orderId1"
-        android:text=""/>
+        android:text="123456"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -106,7 +106,7 @@
         android:layout_marginStart="15dp"
         android:id="@+id/paymentMode1"
         android:textColor="#2196F3"
-        android:text=""/>
+        android:text="123456"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -126,7 +126,7 @@
         android:layout_marginStart="15dp"
         android:textColor="#2196F3"
         android:id="@+id/txTime1"
-        android:text=""/>
+        android:text="123456"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -145,7 +145,7 @@
         android:layout_marginStart="15dp"
         android:textColor="#2196F3"
         android:id="@+id/refId1"
-        android:text=""/>
+        android:text="123456"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -165,7 +165,7 @@
         android:layout_marginStart="15dp"
         android:textColor="#2196F3"
         android:id="@+id/orderAmount1"
-        android:text=""/>
+        android:text="123456"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -184,7 +184,8 @@
         android:layout_marginStart="15dp"
         android:textColor="#2196F3"
         android:id="@+id/txStatus1"
-        android:text=""/>
+        android:text="123456"/>
+
 
 
 </RelativeLayout>
