--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -194,50 +194,13 @@
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginBottom="3dp" />
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lin4"
         android:padding="10dp"
         android:layout_below="@id/v3"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="35dp"
-            android:id="@+id/tata"
-            android:layout_height="35dp"
-            android:layout_marginStart="15dp"
-            android:src="@drawable/ic_baseline_location_on_24"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tata1"
-            android:text="My Address"
-            android:textStyle="bold"
-            android:textColor="#000"
-            android:transitionName="trans3"
-            android:layout_marginStart="30dp"
-            android:textSize="14sp"
-            android:layout_marginTop="6dp"
-            />
-    </LinearLayout>
-    <View
-        android:id="@+id/v4"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#33000000"
-        android:layout_below="@id/lin4"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="3dp" />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lin5"
-        android:padding="10dp"
-        android:layout_below="@id/v4"
         android:orientation="horizontal">
 
         <ImageView
@@ -260,56 +223,56 @@
             android:textSize="14sp"
             android:layout_marginTop="6dp"
             />
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/rupee"
-            android:layout_width="20dp"
-            android:layout_height="15dp"
-            android:layout_marginTop="5dp"
-            android:layout_toStartOf="@id/amount"
-            android:layout_gravity="center"
-            android:src="@drawable/rupee" />
-
-        <TextView
-            android:id="@+id/amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="250"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="20dp"
-            android:textColor="@color/gradientStart"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+<!--        <androidx.appcompat.widget.AppCompatImageView-->
+<!--            android:id="@+id/rupee"-->
+<!--            android:layout_width="20dp"-->
+<!--            android:layout_height="15dp"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:layout_toStartOf="@id/amount"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:src="@drawable/rupee" />-->
+<!--        <TextView-->
+<!--            android:id="@+id/amount"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="250"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_marginEnd="20dp"-->
+<!--            android:textColor="@color/gradientStart"-->
+<!--            android:textSize="16sp"-->
+<!--            android:textStyle="bold" />-->
     </RelativeLayout>
     <View
-        android:id="@+id/v5"
+        android:id="@+id/v4"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#33000000"
-        android:layout_below="@id/lin5"
+        android:layout_below="@id/lin4"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginBottom="3dp" />
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lin6"
+        android:id="@+id/lin5"
         android:padding="10dp"
-        android:layout_below="@id/v5"
+        android:layout_below="@id/v4"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="35dp"
-            android:id="@+id/commission"
+            android:id="@+id/account"
             android:layout_height="35dp"
             android:layout_marginStart="15dp"
-            android:src="@drawable/commission1"
+            android:src="@drawable/ic_baseline_account_balance_24"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/commission1"
-            android:text="My Commission"
+            android:id="@+id/account1"
+            android:text="My Bank Accounts"
+            android:layout_toRightOf="@id/account"
             android:textStyle="bold"
             android:textColor="#000"
             android:transitionName="trans3"
@@ -317,7 +280,26 @@
             android:textSize="14sp"
             android:layout_marginTop="6dp"
             />
-    </LinearLayout>
+        <!--        <androidx.appcompat.widget.AppCompatImageView-->
+        <!--            android:id="@+id/rupee"-->
+        <!--            android:layout_width="20dp"-->
+        <!--            android:layout_height="15dp"-->
+        <!--            android:layout_marginTop="5dp"-->
+        <!--            android:layout_toStartOf="@id/amount"-->
+        <!--            android:layout_gravity="center"-->
+        <!--            android:src="@drawable/rupee" />-->
+        <!--        <TextView-->
+        <!--            android:id="@+id/amount"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:text="250"-->
+        <!--            android:layout_alignParentEnd="true"-->
+        <!--            android:layout_marginEnd="20dp"-->
+        <!--            android:textColor="@color/gradientStart"-->
+        <!--            android:textSize="16sp"-->
+        <!--            android:textStyle="bold" />-->
+    </RelativeLayout>
+
 
     <LinearLayout
         android:id="@+id/btmll"
