--- a/app/src/main/res/layout/activity_add_account_details.xml
+++ b/app/src/main/res/layout/activity_add_account_details.xml
@@ -10,17 +10,15 @@
         android:id="@+id/re1"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/purple_700">
-
+        android:background="@color/gradientEnd">
         <ImageView
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:padding="7dp"
             android:src="@drawable/ic_baseline_chevron_left_24" />
-
         <TextView
             android:id="@+id/bank_name"
             android:layout_width="wrap_content"
@@ -28,141 +26,154 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="25dp"
-            android:transitionName="trans1"
-            android:textColor="#fff"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/bank_name1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="25dp"
-            android:transitionName="trans2"
-            android:textColor="#fff"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/bank_name2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="25dp"
-            android:transitionName="trans3"
-            android:textColor="#fff"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/bank_name3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="25dp"
-            android:transitionName="trans4"
-            android:textColor="#fff"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/bank_name4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="25dp"
-            android:transitionName="trans5"
+            android:text="Add Account Details"
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold" />
     </RelativeLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/e_card_num"
+        android:id="@+id/e_name"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:hint="Enter card Number"
+        android:layout_marginTop="10dp"
+        android:hint="name"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_below="@id/re1"
-        app:boxStrokeColor="@color/teal_200"
+        app:boxStrokeColor="@color/gradientStart"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/e_name1"
+            android:inputType="text"
+            android:imeOptions="actionNext"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/e_email"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="email"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_below="@id/e_name"
+        app:boxStrokeColor="@color/gradientStart"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/e_email1"
+            android:inputType="textEmailAddress"
+            android:imeOptions="actionNext"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/e_phone"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="Phone"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_below="@id/e_email"
+        app:boxStrokeColor="@color/gradientStart"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/e_phone1"
             android:inputType="number"
             android:imeOptions="actionNext"/>
     </com.google.android.material.textfield.TextInputLayout>
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_below="@id/e_card_num"
-       android:id="@+id/li1"
-       android:orientation="horizontal">
-       <com.google.android.material.textfield.TextInputLayout
-           android:id="@+id/e_card_month"
-           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-           android:layout_width="100dp"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="15dp"
-           android:hint="MM"
-           android:layout_marginStart="15dp"
-           android:layout_marginEnd="15dp"
-           app:boxStrokeColor="@color/teal_200"
-           >
-           <com.google.android.material.textfield.TextInputEditText
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:inputType="number"
-               android:imeOptions="actionNext"/>
-       </com.google.android.material.textfield.TextInputLayout>
-       <com.google.android.material.textfield.TextInputLayout
-           android:id="@+id/e_card_year"
-           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-           android:layout_width="100dp"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="15dp"
-           android:hint="yy"
-           android:layout_marginStart="15dp"
-           android:layout_marginEnd="15dp"
-           app:boxStrokeColor="@color/teal_200"
-           >
-           <com.google.android.material.textfield.TextInputEditText
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:inputType="number"
-               android:imeOptions="actionNext"/>
-       </com.google.android.material.textfield.TextInputLayout>
-   </LinearLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/e_card_cvv"
+        android:id="@+id/e_bankaccount"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:hint="cvv"
-        android:layout_below="@id/li1"
+        android:layout_marginTop="10dp"
+        android:hint="Bank Account"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        app:boxStrokeColor="@color/teal_200"
+        android:layout_below="@id/e_phone"
+        app:boxStrokeColor="@color/gradientStart"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:id="@+id/e_bankaccount1"
+            android:inputType="text"
+            android:imeOptions="actionNext"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/e_ifsc"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="IFSC"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_below="@id/e_bankaccount"
+        app:boxStrokeColor="@color/gradientStart"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/e_ifsc1"
+            android:inputType="text"
+            android:imeOptions="actionNext"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/e_vpa"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="Vpa"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_below="@id/e_ifsc"
+        app:boxStrokeColor="@color/gradientStart"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/e_vpa1"
+            android:inputType="text"
+            android:imeOptions="actionNext"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/e_address"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="Address"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_below="@id/e_vpa"
+        app:boxStrokeColor="@color/gradientStart"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/e_address1"
+            android:inputType="text"
             android:imeOptions="actionDone"/>
     </com.google.android.material.textfield.TextInputLayout>
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/payment"
+        android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/button_bg"
-        android:text="Pay"
+        android:background="@drawable/background_gradiant"
+        android:text="Submit"
         android:textColor="#fff" />
 </RelativeLayout>
